--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1-11",
   "private": true,
   "dependencies": {
-    "websocket": "*"
+    "socket.io": "*"
   },
   "subdomain": "ws",
   "scripts": {
